main/default/objects/Coverage__c/fields/Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirements__c</fullName>
    <label>Additional Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rating Required</fullName>
            </value>
            <value>
                <fullName>Load by Default</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Part-Fixed</fullName>
            </value>
            <value>
                <fullName>Exclude from NB and Renewal view</fullName>
            </value>
            <value>
                <fullName>Load without limit</fullName>
            </value>
            <value>
                <fullName>Do not show on Endorsement widget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>