main/default/objects/Coverage__c/fields/Apply_to_Excess__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_Excess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply to Excess</label>
    <type>Checkbox</type>
</CustomField>