main/default/objects/Coverage__c/fields/Apply_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_Quote__c</fullName>
    <label>Apply to Quote</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>