main/default/objects/Coverage__c/fields/Azure_ID__c.field-meta.xml
<CustomField>
    <fullName>Azure_ID__c</fullName>
    <externalId>true</externalId>
    <label>Azure ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>