main/default/objects/Coverage__c/fields/Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code__c</fullName>
    <description>User entered code which will be used across systems (radar, middleware etc)</description>
    <externalId>true</externalId>
    <label>Coverage Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>