main/default/objects/Coverage__c/fields/Coverage_or_Sub__c.field-meta.xml
<CustomField>
    <fullName>Coverage_or_Sub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Coverage</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Coverage</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Coverage/Subs</relationshipLabel>
    <relationshipName>CoveragesSubs</relationshipName>
    <type>Lookup</type>
</CustomField>