main/default/objects/Coverage__c/fields/Coverage_Product__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Product__c</fullName>
    <label>Coverage Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Coverage_Products</valueSetName>
    </valueSet>
</CustomField>