main/default/objects/Coverage__c/fields/Coverage_Product_Combo__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Product_Combo__c</fullName>
    <label>Coverage Product Combo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Coverage_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>EPL</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>