main/default/objects/Coverage__c/fields/Coverage_Selection_Level__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Selection_Level__c</fullName>
    <label>Coverage Selection Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>