main/default/objects/Coverage__c/fields/Coverage_to_replace__c.field-meta.xml
<CustomField>
    <fullName>Coverage_to_replace__c</fullName>
    <label>Coverage to replace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>