main/default/objects/Coverage__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage</fullName>
                <default>true</default>
                <label>Coverage</label>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>