main/default/objects/Coverage__c/fields/Default_Notes__c.field-meta.xml
<CustomField>
    <fullName>Default_Notes__c</fullName>
    <label>Default Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>