main/default/objects/Coverage__c/fields/Endorsement_Tags__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Tags__c</fullName>
    <label>Endorsement Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Above Average (A)</fullName>
            </value>
            <value>
                <fullName>Average (B)</fullName>
            </value>
            <value>
                <fullName>Below Average (C)</fullName>
            </value>
            <value>
                <fullName>Account Specific / Additional Endorsements</fullName>
            </value>
            <value>
                <fullName>Business Services - Accreditation &amp; Certification Services</fullName>
            </value>
            <value>
                <fullName>Business Services - Administrators</fullName>
            </value>
            <value>
                <fullName>Business Services - Advertising &amp; Marketing Agencies</fullName>
            </value>
            <value>
                <fullName>Business Services - Alarm Monitors</fullName>
            </value>
            <value>
                <fullName>Business Services - Auctioneer</fullName>
            </value>
            <value>
                <fullName>Business Services - Audio/Video</fullName>
            </value>
            <value>
                <fullName>Business Services - Billing Services</fullName>
            </value>
            <value>
                <fullName>Business Services - Bookkeeper &amp; Record Keeper</fullName>
            </value>
            <value>
                <fullName>Business Services - Business Training &amp; Seminars</fullName>
            </value>
            <value>
                <fullName>Business Services - Court Reporting</fullName>
            </value>
            <value>
                <fullName>Business Services - Direct Mail Advertising</fullName>
            </value>
            <value>
                <fullName>Business Services - Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Business Services - Employment Agencies</fullName>
            </value>
            <value>
                <fullName>Business Services - Energy &amp; Environmental Consulting</fullName>
            </value>
            <value>
                <fullName>Business Services - Event Planner</fullName>
            </value>
            <value>
                <fullName>Business Services - Executive Placement</fullName>
            </value>
            <value>
                <fullName>Business Services - Funeral &amp; Crematories</fullName>
            </value>
            <value>
                <fullName>Business Services - General Consulting</fullName>
            </value>
            <value>
                <fullName>Business Services - Interior &amp; Graphic Design</fullName>
            </value>
            <value>
                <fullName>Business Services - Literary Agents</fullName>
            </value>
            <value>
                <fullName>Business Services - Management &amp; Business Consulting</fullName>
            </value>
            <value>
                <fullName>Business Services - Membership Organizations</fullName>
            </value>
            <value>
                <fullName>Business Services - Modeling/Talent Agency</fullName>
            </value>
            <value>
                <fullName>Business Services - Notary Public</fullName>
            </value>
            <value>
                <fullName>Business Services - Office Management</fullName>
            </value>
            <value>
                <fullName>Business Services - Pet Related Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>