main/default/objects/Coverage__c/fields/Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Number__c</fullName>
    <label>Form Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>