main/default/objects/Coverage__c/fields/Link_Document__c.field-meta.xml
<CustomField>
    <fullName>Link_Document__c</fullName>
    <label>Link Document</label>
    <type>Url</type>
</CustomField>