main/default/objects/Coverage__c/fields/Main_Profession__c.field-meta.xml
<CustomField>
    <fullName>Main_Profession__c</fullName>
    <label>Main Profession</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Main_Profession</valueSetName>
    </valueSet>
</CustomField>