main/default/objects/Coverage__c/fields/Optional_Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Optional_Coverage_Name__c</fullName>
    <label>Optional Coverage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>