main/default/objects/Coverage__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Drives if a Coverage can be an option or not. This will drive for the selection of Assets on the Policy</inlineHelpText>
    <label>Included</label>
    <type>Checkbox</type>
</CustomField>