main/default/objects/Coverage__c/recordTypes/Main_Coverage.recordType-meta.xml
<RecordType>
    <fullName>Main_Coverage</fullName>
    <active>true</active>
    <description>Parent of Sub Coverage</description>
    <label>Main Coverage</label>
</RecordType>