main/default/objects/Coverage__c/recordTypes/Sub_Coverage.recordType-meta.xml
<RecordType>
    <fullName>Sub_Coverage</fullName>
    <active>true</active>
    <description>Child to Main Coverage</description>
    <label>Sub Coverage</label>
</RecordType>