main/default/objects/Coverage__c/listViews/Endorsement_Coverages.listView-meta.xml
<ListView>
    <fullName>Endorsement_Coverages</fullName>
    <columns>NAME</columns>
    <columns>Coverage_Product__c</columns>
    <columns>Coverage_Type__c</columns>
    <columns>Coverage_or_Sub__c</columns>
    <columns>Coverage_Code__c</columns>
    <columns>Coverage_Selection_Level__c</columns>
    <columns>Endorsement_Categories__c</columns>
    <columns>RecordTypeName__c</columns>
    <columns>Product__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coverage_Type__c</field>
        <operation>equals</operation>
        <value>Endorsement</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coverage__c.Main_Coverage</value>
    </filters>
    <label>Endorsement Coverages</label>
</ListView>