main/default/objects/Coverage__c/listViews/Limits.listView-meta.xml
<ListView>
    <fullName>Limits</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Limits</label>
</ListView>