main/default/objects/Coverage__c/listViews/MPL_Covaerages_Only.listView-meta.xml
<ListView>
    <fullName>MPL_Covaerages_Only</fullName>
    <columns>Form_Number__c</columns>
    <columns>NAME</columns>
    <columns>Additional_Requirements__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Page_Section__c</columns>
    <columns>Coverage_Code__c</columns>
    <columns>Coverage_Product__c</columns>
    <columns>Coverage_Type__c</columns>
    <columns>Rating__c</columns>
    <columns>RecordTypeName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coverage_Product__c</field>
        <operation>equals</operation>
        <value>MPL</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coverage__c.Main_Coverage</value>
    </filters>
    <label>MPL Coverages Only</label>
</ListView>