main/default/objects/Coverage__c/listViews/Rating_Coerages.listView-meta.xml
<ListView>
    <fullName>Rating_Coerages</fullName>
    <columns>NAME</columns>
    <columns>Rating__c</columns>
    <columns>Product__c</columns>
    <columns>Coverage_Type__c</columns>
    <columns>Coverage_Selection_Level__c</columns>
    <columns>Coverage_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rating__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Rating Coerages</label>
</ListView>